refactor: replace .get(0) with .getFirst() in test classes
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>